kenzo: Add camera shim library.
Provides the Android 5.0 SensorManager symbols to the camera blobs.

Change-Id: Ieaeee70626f1dca1d616673af01cc2754e933fea

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -42,6 +42,8 @@ on init
     symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard0
 
+    export LD_SHIM_LIBS "/system/bin/mm-qcamera-daemon|libshim_camera.so"
+
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
