kenzo: cnd: update cnd class
Move cnd to new class to allow
it to come up along with core apps
when device is encrypted and locked.

Change-Id: Iee397bc22ba28ed0b61418580e75bfbb2b467b09

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -355,7 +355,7 @@ service cnd /system/bin/cnd
     socket cnd stream 660 root inet
 
 service dpmd /system/bin/dpmd
-    class late_start
+    class main
     socket dpmd stream 660 root system
 
 service irsc_util /system/bin/irsc_util "/etc/sec_config"
