kenzo: Enable emergency call feature for RIL
* Enable qcril.db's prebuilt
* Copy prebuilt qcril.db into /data/misc/radio, if there is no qcril.db in it
* Set "persist.radio.custom_ecc" as 1
* Complete db check process by init.modem.sh script
* Update few props from stock

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -371,6 +371,11 @@ service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     disabled
     oneshot
 
+service modem-sh /system/bin/sh /system/etc/init.modem.sh
+    class late_start
+    user root
+    oneshot
+
 on property:bluetooth.hciattach=true
     start hciattach
 
