kenzo: Move wcnss-service to late_start class
* The wcnss_service only run once. It has to happen after data is mounted for encrypted device.

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -583,7 +583,7 @@ service audiod /system/bin/audiod
    group system
 
 service wcnss-service /system/bin/wcnss_service
-    class main
+    class late_start
     user system
     group system wifi radio
     oneshot
