kenzo: Update configs from MIUI MM
* MIUI build version: kenzo-user 6.0.1 MMB29M 6.4.20 release-keys

--- a/configs/sensors/sensor_def_qcomdev.conf
+++ b/configs/sensors/sensor_def_qcomdev.conf
@@ -4,7 +4,7 @@
 # Tihs file contains default sensor registry values for Qualcomm development
 # test platforms.
 #
-#  Copyright (c) 2013-2015 Qualcomm Technologies, Inc.
+#  Copyright (c) 2013-2016 Qualcomm Technologies, Inc.
 #  All Rights Reserved.
 #  Confidential and Proprietary - Qualcomm Technologies, Inc.
 
@@ -111,8 +111,9 @@
 # soc_id for msm8976 targets is 278
 # soc_id for apq8076 targets is 277
 # soc_id for msm8956 targets is 266
-# Below configuration is common for msm8976,apq8076 and msm8956
-:soc_id 278 266 277
+# soc_id for apq8056 targets is 274
+# Below configuration is common for msm8976, apq8076, apq8056 & msm8956
+:soc_id 278 266 277 274
 # Orientation of sensors
 # accel x/y/z
 700  -1 0x00010001 #accel-x-axis
