kenzo: Update WCNSS config
* Remove duplicate wifi.interface prop

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -143,7 +143,7 @@ WmmIsEnabled=0
 
 # 802.11d support
 
-g11dSupportEnabled=1
+g11dSupportEnabled=0
 
 # CCX Support and fast transition
 EseEnabled=0
@@ -392,8 +392,8 @@ gEnableTDLSBufferSta=1
 #Enable/Disable Mgmt Frame Logging
 gEnableMgmtLogging=1
 
-# xuke @ 20160322	Disable dynamic split scan mechanism to optimize the wifi data disconnection issue.
-gEnableDynSplitScan=0
+#Enable/Disable MAc Spoofing
+gEnableMacAddrSpoof=1
 
 END
 
